# SIGMA-PROBE

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  test_results.md  test_results_2.md  test_results_3.md  test_results_4.md  test_results_5.md  test_results_6.md  test_results_7.md  test_results_8.md  test_results_9.md  test_system.py
src/: __init__.py
src/intelligence/: ioc_manager.py
src/models/: core.py
src/pipeline/: base.py  detectors.py  ingestion.py  profiling.py  scoring.py
src/sigma_probe/: main.py
src/sigma_probe/intelligence/: mitre_mapping.py
src/sigma_probe/models/: __init__.py  core.py
src/sigma_probe/pipeline/: __init__.py  base.py  detectors.py  enrichment.py  ingestion.py  metadetector.py  profiling.py  recommendations.py  reporting.py  rules_engine.py  scoring.py
tests/: __init__.py  test_detectors.py  test_lfi_scenario.py  test_models.py  test_scoring.py
